# humanoid_ai_textbook

./: .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  README.md  feature_description.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .gitignore  README.md  example_retrieval.py  main.py  pyproject.toml  retrieval.py  test_rag_backend.py  test_retrieval.py  validate_pipeline.py
backend/test_data/: sample_content.html
history/adr/: 001-content-architecture-module-structure.md  002-docusaurus-component-strategy.md  003-embedded-code-snippet-strategy.md  004-metadata-search-glossary-information-architecture.md  005-cohere-qdrant-selection.md
history/prompts/1-humanoid-ai-textbook/: 2-complete-phase4-tasks-t057-t064.tasks.prompt.md  3-complete-phase5-tasks-t065-t079.tasks.prompt.md  4-complete-phase6-tasks-t080-t093.tasks.prompt.md  5-confirm-all-tasks-completed.tasks.prompt.md
specs/1-humanoid-ai-textbook/: data-model.md  learning-objectives.md  plan.md  prerequisite-map.md  quality-report-phase4.md  quickstart.md  research-bibliography.md  research.md  spec.md  tasks.md
specs/2-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec-1-embeddings.md  spec-2-retrieval.md  tasks.md
specs/3-cohere-qdrant-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
textbook-site/: docusaurus.config.js  package.json  sidebars.js
textbook-site/docs/: intro.md  skills-documentation.md
textbook-site/docs/appendices/: index.md  (+4 more)
textbook-site/skills/: README.md
(+53 files in other folders)
