[project]
name = "cohere-qdrant-rag"
version = "0.1.0"
description = "RAG backend for Humanoid AI Textbook - extracts content, generates embeddings with Cohere, and stores in Qdrant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=4.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"